--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,25 @@ body {
 }
 
 /*reset*/
+li {
+  outline: 1px solid red;
+}
 .list {
     list-style: none;
+    display: flex;
+    }
+h1, h2, h3, p, ul {
+    margin: 0;
+    padding: 0;
+    outline: 1px solid red;
+  }
+img {
+  display: block;
+}
+.container {
+  max-width: 1158px;
+  margin-inline: auto;
+  padding-inline: 15px;
 }
 /**
   |============================
@@ -59,6 +76,8 @@ color: var(--hover);
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+   
 }
 .contact {
     color: var(--main-color);
@@ -69,6 +88,30 @@ color: var(--hover);
     text-decoration: none;
     font-style: normal;
 }
+.item:not(:last-child) {
+  
+  margin-right: 40px;
+  
+}
+/*.item {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}*/
+.header 
+.container {
+  display: flex;
+  justify-content: space-between;
+
+}
+.header {
+  
+}
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 
 
 
@@ -121,6 +164,10 @@ color: var(--hover);
 .text-team {
    font-size: 16px;
 } 
+.conteiner-team {
+
+}
+
 /*Portfolio*/
 
 .btn-active:hover,
@@ -159,6 +206,9 @@ color: var(--hover);
 .link {
   text-decoration: none;
 }
+.container-categ {
+
+}
 
 /**
   |============================
@@ -170,6 +220,10 @@ color: var(--hover);
 }
 .logo {
   color: var(--color-text-fil-btn);
+  flex-direction: row;
+  align-items: center;
+  display:flex;
+  padding: 24px 0;
 }
 .logo-studio-foot {
   color: var(--bg-fil-btn);
