--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 /* background color filter btn, order in the hover #404BBF; */
 /* filter btn background: #F4F4FD; */
 /* filter btn-text color: #4D5AE5; */
+/* frame-color: #E7E9FC; */
 
 :root {
   --color-text-fil-btn: #4d5ae5;
@@ -16,6 +17,7 @@
   --logo-font: Raleway, sans-serif;
   --color-filt-accent: #ffffff;
   --color-h2-h3-texheader: #2e2f42;
+  --frame-color: #E7E9FC;
 }
 
 body {
@@ -29,13 +31,7 @@ body {
 }
 
 /*reset*/
-li {
-  outline: 1px solid red;
-}
-.list {
-  list-style: none;
-  display: flex;
-}
+
 h1,
 h2,
 h3,
@@ -43,7 +39,7 @@ p,
 ul {
   margin: 0;
   padding: 0;
-  outline: 1px solid red;
+  /*outline: 1px solid red;*/
 }
 img {
   display: block;
@@ -53,16 +49,34 @@ img {
   margin-inline: auto;
   padding-inline: 15px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /**
   |============================
   | Header
   |============================
 */
-
+.nav-li {
+  list-style: none;
+  display: flex;
+}
 .header-contact {
   font-style: normal;
 }
-
+.header {
+  border-bottom: 1px solid var(--frame-color);
+}
 .logo-studio {
   color: var(--color-h2-h3-texheader);
 }
@@ -80,6 +94,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
+  padding: 24px 0;
 }
 .contact {
   color: var(--main-color);
@@ -89,6 +104,14 @@ img {
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
+  padding: 24px 0;
+  display:flex
+  
+}
+.addr {
+  list-style: none;
+  gap: 40px;
+  display: flex;
 }
 .item:not(:last-child) {
   margin-right: 40px;
@@ -102,11 +125,10 @@ img {
   display: flex;
   justify-content: space-between;
 }
-.header {
-}
 .nav {
   display: flex;
   align-items: center;
+  gap: 76px;
 }
 
 /**
@@ -116,8 +138,16 @@ img {
 */
 
 /*webstudio index*/
+
+.list {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+}
+
 .title-bg {
   background-color: var(--color-h2-h3-texheader);
+  padding: 188px 0;
 }
 .title {
   color: var(--color-filt-accent);
@@ -126,6 +156,9 @@ img {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+  max-width: 496px;
+  margin-inline: auto;
+  margin-bottom: 48px;
 }
 .order-btn {
   background-color: var(--color-text-fil-btn);
@@ -136,6 +169,20 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+
+  padding: 16px 32px;
+  min-width: 169px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  margin: auto;
+  display: flex;
+}
+.li-benef {
+  flex-basis: calc((100% - 24px * 3) / 4);
+}
+.sec-doing {
+  padding-bottom: 120px;
 }
 .h-doing,
 .h-team {
@@ -146,26 +193,44 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .team {
   background-color: var(--bg-fil-btn);
+  padding: 120px 0;
 }
 
 .list-team {
   background-color: var(--color-filt-accent);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 .text-team {
   font-size: 16px;
 }
+.sec-benef {
+  padding: 120px 0;
+}
 .conteiner-team {
+  padding: 32px 16px;
+  text-align: center;
 }
 
 /*Portfolio*/
-
+.portfolio-sec {
+  padding: 96px 0 120px;
+}
+.filt-ul {
+  margin-bottom: 72px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
 .btn-active:hover,
 .btn-active:focus {
   color: var(--color-filt-accent);
   background-color: var(--hover);
+  border-color: transparent;
 }
 .filt-btn {
   color: var(--color-text-fil-btn);
@@ -179,9 +244,16 @@ img {
   text-align: center;
   letter-spacing: 0.04em;
   cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid var(--frame-color);
+  border-radius: 4px;
 }
 /*-------------------*/
-
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
 .category-link {
   text-decoration: none;
 }
@@ -191,6 +263,7 @@ img {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .category {
   color: var(--main-color);
@@ -199,6 +272,9 @@ img {
   text-decoration: none;
 }
 .container-categ {
+  padding: 32px 16px;
+  border: 1px solid var(--frame-color);
+  border-top: none; 
 }
 
 /**
@@ -208,6 +284,7 @@ img {
 */
 .footer {
   background-color: var(--color-h2-h3-texheader);
+  padding: 100px 0;
 }
 .logo {
   color: var(--color-text-fil-btn);
@@ -234,4 +311,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  max-width: 264px;
 }
