--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,9 @@ img {
   margin-inline: auto;
   padding-inline: 15px;
 }
+.h-contein {
+  align-items: center;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -128,7 +131,7 @@ img {
 .nav {
   display: flex;
   align-items: center;
-  gap: 76px;
+  
 }
 
 /**
@@ -202,9 +205,7 @@ img {
 
 .list-team {
   background-color: var(--color-filt-accent);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
-}
+ }
 .text-team {
   font-size: 16px;
 }
@@ -214,6 +215,8 @@ img {
 .conteiner-team {
   padding: 32px 16px;
   text-align: center;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 /*Portfolio*/
@@ -291,7 +294,11 @@ img {
   flex-direction: row;
   align-items: center;
   display: flex;
-  padding: 24px 0;
+  margin-right: 76px;
+}
+.logof {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .logo-studio-foot {
   color: var(--bg-fil-btn);
