--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ img {
   border-radius: 4px;
   border: none;
   margin: auto;
-  display: flex;
+  display: block;
 }
 .li-benef {
   flex-basis: calc((100% - 24px * 3) / 4);
