--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,9 @@ img {
 
 .list-team {
   background-color: var(--color-filt-accent);
- }
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px; 
+}
 .text-team {
   font-size: 16px;
 }
@@ -215,8 +217,7 @@ img {
 .conteiner-team {
   padding: 32px 16px;
   text-align: center;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
+    
 }
 
 /*Portfolio*/
@@ -299,6 +300,9 @@ img {
 .logof {
   display: inline-block;
   margin-bottom: 16px;
+  color: var(--color-text-fil-btn);
+  flex-direction: row;
+  align-items: center;
 }
 .logo-studio-foot {
   color: var(--bg-fil-btn);
